[fix] Menu: on mobile device, close menu when click on account or logout [fix] Hide back button when not need

--- a/src/app/shared/toolbar/toolbar.scss
+++ b/src/app/shared/toolbar/toolbar.scss
@@ -1,3 +1,3 @@
-app-toolbar ion-button.back-button {
+ion-button.back-button {
   display: none;
 }
