--- a/src/app/trip/trip.page.scss
+++ b/src/app/trip/trip.page.scss
@@ -8,3 +8,7 @@ ion-col>ion-label {
   word-wrap: break-word;
   white-space: normal;
 }
+
+table-operations.hidden {
+  visibility: hidden !important;
+}
